# cinderace-sessions

./: .gitignore  .vscodeignore  AUDIT_REPORT.md  CHANGELOG.md  FORGE.md  README.md  esbuild.js  package-lock.json  package.json  pyproject.toml  requirements.txt
cinderace_sessions/: __init__.py  __main__.py  config.py  controller_app.py  single_instance.py
cinderace_sessions/controller_assets/: __init__.py  ui.css  ui.html  ui.js
cinderace_sessions/detector/: __init__.py  base.py  claude_code.py  codex.py  forge.py  gemini_cli.py  registry.py
cinderace_sessions/parser/: __init__.py  base.py  forge_parser.py  gemini_parser.py  jsonl_parser.py  markdown_parser.py  text_parser.py
cinderace_sessions/renderer/: __init__.py  html.py  json_export.py  jsonl_export.py  markdown.py  zip_export.py
cinderace_sessions/summarizer/: __init__.py  engine.py  model_catalog.py  ollama.py  template.py
controller/: __init__.py  __main__.py  tray.py
docs/superpowers/plans/: 2026-05-16-cinderace-sessions-v2-implementation.md
docs/superpowers/specs/: 2026-05-16-cinderace-sessions-v2-design.md
src/: config.ts  extension.ts  formats.ts  htmlRenderer.ts  parser.ts  renderer.ts  sessionDetector.ts  types.ts
tests/: __init__.py  test_gemini_parser.py  test_jsonl_parser.py  test_model_catalog.py
